// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Color/ColorPalette interactive 1`] = `
<div
  className="canvasColorPalette"
>
  <div
    className="item-grid-row"
  >
    <button
      aria-label="white"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#fff",
            }
          }
        />
      </div>
    </button>
    <button
      aria-label="#666"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#666",
            }
          }
        />
      </div>
    </button>
    <button
      aria-label="black"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#000",
            }
          }
        />
      </div>
    </button>
    <button
      aria-label="#abc"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abc",
            }
          }
        />
      </div>
    </button>
    <button
      aria-label="#def"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#def",
            }
          }
        />
      </div>
    </button>
    <button
      aria-label="#abcdef"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abcdef",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots components/Color/ColorPalette six colors 1`] = `
Array [
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        aria-label="white"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          />
        </div>
      </button>
      <button
        aria-label="#666"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        aria-label="black"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
      <button
        aria-label="#abc"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abc",
              }
            }
          />
        </div>
      </button>
      <button
        aria-label="#def"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#def",
              }
            }
          />
        </div>
      </button>
      <button
        aria-label="#abcdef"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abcdef",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>,
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        aria-label="white"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          >
            <span
              className="selected-color"
              color="#333"
              data-euiicon-type="check"
            />
          </div>
        </div>
      </button>
      <button
        aria-label="#666"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        aria-label="black"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
      <button
        aria-label="#abc"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abc",
              }
            }
          />
        </div>
      </button>
      <button
        aria-label="#def"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#def",
              }
            }
          />
        </div>
      </button>
      <button
        aria-label="#abcdef"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abcdef",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots components/Color/ColorPalette six colors, value missing 1`] = `
<div
  className="canvasColorPalette"
>
  <div
    className="item-grid-row"
  >
    <button
      aria-label="white"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#fff",
            }
          }
        />
      </div>
    </button>
    <button
      aria-label="#666"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#666",
            }
          }
        />
      </div>
    </button>
    <button
      aria-label="black"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#000",
            }
          }
        />
      </div>
    </button>
    <button
      aria-label="#abc"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abc",
            }
          }
        />
      </div>
    </button>
    <button
      aria-label="#def"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#def",
            }
          }
        />
      </div>
    </button>
    <button
      aria-label="#abcdef"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abcdef",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots components/Color/ColorPalette six colors, wrap at 4 1`] = `
<div
  className="canvasColorPalette"
>
  <div
    className="item-grid-row"
  >
    <button
      aria-label="white"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#fff",
            }
          }
        >
          <span
            className="selected-color"
            color="#333"
            data-euiicon-type="check"
          />
        </div>
      </div>
    </button>
    <button
      aria-label="#666"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#666",
            }
          }
        />
      </div>
    </button>
    <button
      aria-label="black"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#000",
            }
          }
        />
      </div>
    </button>
    <button
      aria-label="#abc"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abc",
            }
          }
        />
      </div>
    </button>
  </div>
  <div
    className="item-grid-row"
  >
    <button
      aria-label="#def"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#def",
            }
          }
        />
      </div>
    </button>
    <button
      aria-label="#abcdef"
      className="euiLink euiLink--primary canvasColorPalette__dot"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abcdef",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots components/Color/ColorPalette three colors 1`] = `
Array [
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        aria-label="white"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          />
        </div>
      </button>
      <button
        aria-label="#666"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        aria-label="black"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>,
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        aria-label="white"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          >
            <span
              className="selected-color"
              color="#333"
              data-euiicon-type="check"
            />
          </div>
        </div>
      </button>
      <button
        aria-label="#666"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        aria-label="black"
        className="euiLink euiLink--primary canvasColorPalette__dot"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>,
]
`;
